webdrivermanager (1.7.2)

  + Add wdm.architecture configuration key (issue #154)
  + Read properties values from system environment as fallback to properties

 -- Boni Garcia <boni.gg@gmail.com>  Mon, 17 Sep 2017 13:28:00 +0200


webdrivermanager (1.7.1)

  + Use NTCredentials for NTLM AuthSchemes (PR #149 from andrew-sumner)
  + Avoid throwing exception in the case of non supported managers (e.g. RemoteWebDriver)
  + Improve support for new versions of operadriver (e.g. 2.27 and 2.29)

 -- Boni Garcia <boni.gg@gmail.com>  Mon, 10 Jul 2017 18:03:00 +0200


webdrivermanager (1.7.0)

  + Bug-fix: added connection manager shared (PR #140 from tharakadesilva)
  + Bug-fix: Improve support for Edge (issue #135)
  + Bug-fix: Support for latest version of operadriver (issues #134 and #146)
  + Automatic retry forcing the use of cache on exception (issue #125)
  + Skip beta versions by default (issue #127 and #136)
  + Added getBinaryPath() method to BrowserManager API
  + Prevent non-executable files being picked as driver executables (PR #133 from Konfuzzyus)
  + Remove guava, commons-codec dependencies
  + Format code with spaces instead of tabs

 -- Boni Garcia <boni.gg@gmail.com>  Sun, 18 Jun 2017 19:50:00 +0200


webdrivermanager (1.6.2)

  + Downgrade com.typesafe:config to 1.2.1 (for Java 7 compliance)
  + New method in BrowserManager API: forceDownload()
  + Bug-fix: issue #115 number format exception due to IEDriver beta
  + Ignore Taobao test due to connection reset error
  + Support proxy server with authentication (isee #118, PR #120 by kazuki43zoo)
  + Checking that binary files are actually executable (issue #114 and #121)
  + Bug-fix: issue #116 Ensure files aren't folders to check distro name

 -- Boni Garcia <boni.gg@gmail.com>  Sun, 4 Apr 2017 11:08:00 +0200


webdrivermanager (1.6.1)

  + New method in BrowserManager API: proxy()
  + Bug-fix: forceCache() method was not working properly
