@@ -1,27 +1,0 @@
-/*
- * (C) Copyright 2016 Boni Garcia (http://bonigarcia.github.io/)
- *
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the GNU Lesser General Public License
- * (LGPL) version 2.1 which accompanies this distribution, and is available at
- * http://www.gnu.org/licenses/lgpl-2.1.html
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
- * Lesser General Public License for more details.
- *
- */
-package io.github.bonigarcia.wdm;
-
-/**
- * Manager for Marionette.
- *
- * @author Boni Garcia (boni.gg@gmail.com)
- * @since 1.4.0
- * @deprecated use {@link FirefoxDriverManager} instead.
- */
-@Deprecated
-public class MarionetteDriverManager extends FirefoxDriverManager {
-
-}
